--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "@tanstack/react-query-devtools": "^4.26.1",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
-    "react-dom": "18.2.0",
     "@types/react-dom": "18.0.11",
-    "classnames": "^2.3.2",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "next": "13.2.3",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-popper": "^2.3.0",
@@ -29,13 +28,14 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.14",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "tailwindcss": "^3.2.7"
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
